Fix alignment on home page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,7 @@
 main {
-  margin-left: 10px
-  /* width: 100%;
+  margin-left: 10px;
+  width: 100%;
   display: flex;
-  justify-content: center; */
+  flex-direction: column;
+  align-items: center;
 }
