--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 .card-display {
-  width: 90%;
+  width: 85%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
